# Sentinel

./: Cargo.toml  README.md  docker-compose.yml  verify-structure.ps1
docker/: api-layer.Dockerfile  behavioral-worker.Dockerfile  dynamic-worker.Dockerfile  static-worker.Dockerfile
k8s/: api-layer-deployment.yaml  behavioral-worker-deployment.yaml  behavioral-worker-hpa.yaml  configmaps.yaml  dynamic-worker-deployment.yaml  dynamic-worker-hpa.yaml  ingress.yaml  migration-job.yaml  minio-deployment.yaml  namespace.yaml  nats-deployment.yaml  pgbouncer-deployment.yaml  postgresql-deployment.yaml  prometheus-adapter-config.yaml  rbac.yaml  redis-deployment.yaml  scaling-alerts.yaml  scaling-event-logger.yaml  secrets-template.yaml  static-worker-deployment.yaml  static-worker-hpa.yaml  worker-servicemonitor.yaml
k8s/autoscaling-tests/: load-generator.yaml  test-scenarios.yaml
k8s/observability/: grafana-deployment.yaml  jaeger-deployment.yaml  loki-deployment.yaml  prometheus-deployment.yaml
migrations/: 20250101000001_create_tenants.sql  20250101000002_create_users.sql  20250101000003_create_artifacts.sql  20250101000004_create_verdicts.sql  20250101000005_create_cases.sql  20250101000006_create_audit_logs.sql  20250101000007_create_hash_lists.sql  20250101000008_create_analysis_reports.sql  20250101000009_create_endpoint_events.sql  20250101000010_create_alerts.sql  20250101000011_create_integrations.sql  20250101000012_create_retention_policies.sql  20250101000013_create_data_exports.sql  20250101000014_create_data_deletions.sql
oper/specs/security-saas-platform/: design.md  requirements.md  tasks.md
scripts/: deploy-local.sh  test-deployment.sh
tests/integration/: Cargo.toml  run-tests.ps1  validate-tests.ps1
tests/integration/tests/: complete_analysis_flow.rs  endpoint_monitoring.rs  load_testing.rs  multi_tenant_isolation.rs  security_testing.rs  siem_integration.rs
