[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
redis = { workspace = true }
async-nats = { workspace = true }

# Test dependencies
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Local crates
shared-domain = { path = "../../crates/shared-domain" }
shared-db = { path = "../../crates/shared-db" }
shared-crypto = { path = "../../crates/shared-crypto" }

[[test]]
name = "complete_analysis_flow"
path = "tests/complete_analysis_flow.rs"
harness = true

[[test]]
name = "multi_tenant_isolation"
path = "tests/multi_tenant_isolation.rs"
harness = true

[[test]]
name = "siem_integration"
path = "tests/siem_integration.rs"
harness = true

[[test]]
name = "endpoint_monitoring"
path = "tests/endpoint_monitoring.rs"
harness = true

[[test]]
name = "load_testing"
path = "tests/load_testing.rs"
harness = true

[[test]]
name = "security_testing"
path = "tests/security_testing.rs"
harness = true
